exports[`no-restricted-types > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`bigint\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`unknown\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`void\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`[]\` as a type. Use unknown[] instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`[]\` as a type. Use unknown[] instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`[]\` as a type. Use unknown[] instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 13
        },
        "end": {
          "line": 1,
          "column": 15
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 16`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use '{}' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 17`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use '{}' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 18`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use '{}' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 13
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 19`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`boolean\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 20`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 13
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 21`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 6
        },
        "end": {
          "line": 1,
          "column": 12
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 22`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 26
        },
        "end": {
          "line": 1,
          "column": 32
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 23`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned1\` as a type. Use Ok1 instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 26
        },
        "end": {
          "line": 1,
          "column": 33
        }
      }
    },
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned2\` as a type. Use Ok2 instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 35
        },
        "end": {
          "line": 1,
          "column": 42
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 24`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 27
        },
        "end": {
          "line": 1,
          "column": 33
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 25`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 21
        },
        "end": {
          "line": 1,
          "column": 27
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 26`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 27`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`NS.Banned\` as a type. Use NS.Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 28`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`{}\` as a type. Use object instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 29`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`NS.Banned\` as a type. Use NS.Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`never\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 30`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 20
        },
        "end": {
          "line": 1,
          "column": 26
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 31`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned<any>\` as a type. Don't use \`any\` as a type parameter to \`Banned\`",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 21
        },
        "end": {
          "line": 1,
          "column": 32
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 32`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`Banned<A,B>\` as a type. Don't pass \`A, B\` as parameters to \`Banned\`",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 21
        },
        "end": {
          "line": 1,
          "column": 32
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`null\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`number\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`object\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`string\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`symbol\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-restricted-types > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-restricted-types",
      "messageId": "bannedTypeMessage",
      "message": "Don't use \`undefined\` as a type. Use Ok instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;
